feat: metodo services para registrar un proveedor

--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -77,11 +77,10 @@
     <!-- Btn de buscar y limpiar -->
     <div class="row text-right">
       <div class="col d-flex justify-content-end">
-        <button mat-button color="accent" class="btn round" (click)="registrarProveedor()" id="btnLimpiarFiltro">
-          <mat-icon>autorenew</mat-icon>
-          Limpiar
+        <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+          Cancelar
         </button>
-        <button mat-raised-button color="accent" class="btn round" (click)="cancelar()" id="btnBuscar">Buscar</button>
+        <button mat-raised-button color="accent" class="btn round" (click)="registrarProveedor()" id="btnBuscar">Registar</button>
       </div>
     </div>
 
