feat: consultar proveedores

--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
@@ -3,14 +3,14 @@
     <div class="row">
       <div class="col d-flex justify-content-between">
         <p class="titulo">Consultar proveedores</p>
-        <button mat-raised-button color="accent" class="btn round mb-3" (click)="registrarNuevoProveedor()">Registrar nuevo proveedor</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoProveedor()">Registrar nuevo proveedor</button>
       </div>
     </div>
 
     <mat-divider></mat-divider>
 
     <br>
-    <h4>Filtros de búsqueda</h4>
+    <h4 style="color: grey">Filtros de búsqueda</h4>
 
     <form [formGroup]="form">
       <div class="row pt-4">
@@ -44,58 +44,27 @@
 
 
   <mat-card-header class="header-card">
-    <h5>Proveedores encontrados</h5>
+    <h2 style="color: grey">Proveedores encontrados</h2>
   </mat-card-header>
 
-  <!--
   <mat-card>
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort>
-            <ng-container matColumnDef="nrormtsa">
-              <mat-header-cell *matHeaderCellDef>Nro RMTSA</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Nro RMTSA">{{element.nroTramite}}</mat-cell>
+            <ng-container matColumnDef="nombre">
+              <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+              <mat-cell *matCellDef="let proveedor" data-label="Nro RMTSA">{{ proveedor.nombre }}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="emision">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Emisión</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Emisión">{{element.fecEmision | date:'dd/MM/yyyy'}}</mat-cell>
+            <ng-container matColumnDef="telefono">
+              <mat-header-cell *matHeaderCellDef>Teléfono</mat-header-cell>
+              <mat-cell *matCellDef="let proveedor" data-label="Emisión">{{ proveedor.telefono }}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="vencimiento">
-              <mat-header-cell *matHeaderCellDef mat-sort-header>Vencimiento</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Vencimiento">{{element.fecVencimiento | date:'dd/MM/yyyy'}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="cuit">
-              <mat-header-cell *matHeaderCellDef>CUIT</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="CUIT">{{element.cuit}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="titular">
-              <mat-header-cell *matHeaderCellDef>Titular</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Titular">{{element.nombreTitular}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="dominio">
-              <mat-header-cell *matHeaderCellDef>Dominio</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Dominio">{{element.dominio}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="marca">
-              <mat-header-cell *matHeaderCellDef>Marca</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Marca">{{element.marca}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="modelo">
-              <mat-header-cell *matHeaderCellDef>Modelo</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Modelo">{{element.modelo}}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="estado">
-              <mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>
-              <mat-cell *matCellDef="let element" data-label="Estado">{{element.estadoId}}</mat-cell>
+            <ng-container matColumnDef="mail">
+              <mat-header-cell *matHeaderCellDef>Mail</mat-header-cell>
+              <mat-cell *matCellDef="let proveedor" data-label="Vencimiento">{{ proveedor.mail }}</mat-cell>
             </ng-container>
 
             <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
@@ -115,7 +84,6 @@
       </div>
     </mat-card-content>
   </mat-card>
--->
 </div>
 
 
