--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: white;
 }
 
+.ver {
+  color: #3400c6;
+}
+
 /* Change the border focused color
 .mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused
 .mdc-notched-outline__leading,
