feat: eliminar proveedores

--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
@@ -76,6 +76,9 @@
                 <button class="btn" mat-icon-button matTooltip="Modificar" (click)="verProveedor(proveedor, true)">
                   <mat-icon class="editar">edit</mat-icon>
                 </button>
+                <button mat-icon-button color="primary"  matTooltip="Eliminar" (click)="eliminarProveedor(proveedor.id)">
+                  <mat-icon class="eliminar">delete</mat-icon>
+                </button>
               </mat-cell>
             </ng-container>
 
