--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: #edb867;
 }
 
+.eliminar {
+  color: #9f1212;
+}
+
 /* Change the border focused color
 .mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-text-field--focused
 .mdc-notched-outline__leading,
