feat: registrar empleado

--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -1,8 +1,9 @@
 <div class="container py-3 col-xl-11">
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
-      <div class="col">
-        <p class="titulo">Consultar empleados</p>
+      <div class="col d-flex justify-content-between align-items-center">
+        <p class="titulo">Consultar Empleados</p>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoEmpleado()">Registrar nuevo empleado</button>
       </div>
     </div>
 
