feat: avances con gestion de promociones
- Se mapea producto a la promoción
- Se crean clases y modelos de Producto, Marca, tipoProducto, etc.
- Se muestra en la tabla de detalle el nombre del producto, en vez del id.
- Se crean los mat-autocomplete (restan problemas con id).

--- a/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
+++ b/src/app/modules/promociones/consultar-promociones/consultar-promociones.component.html
@@ -64,7 +64,7 @@
 
             <ng-container matColumnDef="producto">
               <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
-              <mat-cell *matCellDef="let promocion" data-label="Nombre del producto">{{ promocion.idProducto }}</mat-cell>
+              <mat-cell *matCellDef="let promocion" data-label="Nombre del producto">{{ promocion.producto.nombre }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="acciones">
