--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -62,18 +62,35 @@
                      [formControl]="txProvincia"
                      [matAutocomplete]="autoCompleteProvincia">
             </mat-form-field>
-            <mat-autocomplete #autoCompleteProvincia="matAutocomplete">
+            <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
               <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
                 {{provincia.nombre}}
               </mat-option>
             </mat-autocomplete>
           </div>
+        <!--
+        <div class="col-md-3">
+          <mat-form-field appearance="outline">
+            <mat-label>Localidad</mat-label>
+            <input matInput
+                   placeholder="Ingrese"
+                   [formControl]="txLocalidad"
+                   [matAutocomplete]="autoCompleteLocalidad">
+          </mat-form-field>
+          <mat-autocomplete #autoCompleteLocalidad="matAutocomplete" (optionSelected)="seleccionarLocalidad()">
+            <mat-option *ngFor="let localidad of this.localidadesFiltradas" [value]="localidad.nombre">
+              {{localidad.nombre}}
+            </mat-option>
+          </mat-autocomplete>
+        </div>
+        -->
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Localidad</mat-label>
             <input type="text" matInput [formControl]="txLocalidad"/>
           </mat-form-field>
         </div>
+
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Calle</mat-label>
